<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/house_of_operation"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/house_of_operation"
        android:orderInCategory="1"
       />
    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/map"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/open_slopes"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/open_slopes"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/lifts"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/lifts"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/weather"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/weather"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/info"
        android:orderInCategory="1"
        />
</menu>